--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 						<div class="content">
 							<div class="slideshow">
 								<a class="slide">
-									<img class="block-20" src="images/Chess-1.PNG" alt="Chess Coach Robotic Arm image" id="projectImg3">
+									<img class="block-20" src="images/Chess-1.png" alt="Chess Coach Robotic Arm image" id="projectImg3">
 								</a>
 							</div>
 							<div class="text mt-3 float-right d-block">
